# pydantic-ai-ttc

./: .gitignore  debug_dialog.py  debug_playwright.py  knowledgeForAI.md  package-lock.json  pyproject.toml  pytest.ini  run_ui_tests.sh  start_ttc_agent.sh  ui_test_report.html
tests/ui/: README.md  UITestReadme.md
ttc_agent/: README.md  __init__.py  agents.py  api.py  api_clean.py  api_fixed.py  bot.py  bot_api.py  chat.py  chat_app.html  chat_app.py  chat_app.ts  config.py  conversation.py  database.py  direct_api.py  models.py  pyproject.toml  update_fastapi.py
ttc_agent/docs/: chat_window_scrolling_best_practices.md
ttc_agent/react_frontend/: build.sh  package-lock.json  package.json  vite.config.ts
ttc_agent/react_frontend/src/: App.tsx
ttc_agent/react_frontend/src/components/chat/: BotManagementDialog.tsx  BotSelectionDialog.tsx  ChatContainer.tsx  ChatInterface.tsx  ConversationList.tsx  MessageItem.tsx
ttc_agent/react_frontend/src/components/chat/__tests__/: ChatScrolling.test.tsx
ttc_agent/react_frontend/src/services/: BotService.ts  ChatService.ts  index.ts
ttc_agent/react_frontend/src/types/: chat.ts
ttc_agent/static/: index.html
ttc_agent/static/assets/: index-0I_kz0bp.js  index-BbXeAUcF.js  index-ChI77-AQ.js  index-CoXEStce.js  index-D3i656wR.js  index-jutxTd5t.css
ttc_agent/tests/ui/: README.md  __init__.py  conftest.py  knowledge.md  port_utils.py  test_all.py  test_combined.py  test_conversation.py  test_conversation_switching.py  test_create_conversation.py  test_send_message.py  test_utils.py
